# flash-invaders-v2

./: .env  .env.example  .env.template  .gitignore  .prettierignore  CLAUDE.md  LICENSE  README.md  flash-invaders-v2.drawio  flash-invadersv2.drawio  package.json  pnpm-lock.yaml  postcss.config.cjs  svelte.config.js  tailwind.config.cjs  tailwind.config.js  tsconfig.json  vite.config.js  vite.config.ts
src/: app.css  app.html  app.pcss  error.html
src-tauri/: Cargo.toml  Info.ios.plist  tauri.android.conf.json  tauri.conf.json  tauri.ios.conf.json
src-tauri/capabilities/: android.json  default.json  ios.json  mobile.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/components/: Greet.svelte
src/lib/: database.types.ts  invader-utils.ts  nfc-utils.ts  pending-invader.svelte.ts  session-state.svelte.ts  supabase-client.ts  utils.ts
src/lib/game-data/: quiz.ts  (+1 more)
src/params/: integer.ts  locale.ts
src/routes/: +error.svelte  +layout.svelte  +layout.ts  +page.svelte  +page.ts
static/hints/: 1.avif  10.avif  11.avif  2.avif  3.avif  4.avif  5.avif  6.avif  7.avif  8.avif  9.avif
supabase/: config.toml
supabase/migrations/: 20240622074249_remote_schema.sql  20240627165715_remote_schema.sql  20240630134945_invaders_schema.sql  20240630141825_invaders_schema2.sql  20240630150241_invaders_schema3.sql  20240630160515_fixed_new_user.sql  20240708084749_add_permission_function.sql  20240709210556_update_permission_function.sql  20240711135055_count_found_invaders.sql  20240712165824_check_invader_privilege.sql  20240730181533_remote_schema.sql
(+106 files in other folders)
